--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ header{
 }
 
 #avatar_wrapper{
-        width:  100px;
+    width:  100px;
     height: 100px;
     position: absolute;
     right: 10%;
@@ -251,6 +251,41 @@ button:hover::after{
     transform: translate(5px, 5px);
 }
 
+/* Copy a annuler*/
+
+.annulationButton{
+    background: transparent;
+    width: 200px;
+    display: block;
+    padding: 15px;
+    font-family: poppins;
+    font-size: 1rem;
+    position: relative;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+}
+
+.annulationButton::before, .annulationButton::after{
+    content:"";
+    position: absolute;
+    border: 2px solid #1e272e;
+    left: 0;
+    bottom: 0;
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    z-index: -1;
+    transition: transform .3s ease;
+}
+
+.annulationButton:hover::before{
+    transform: translate(-5px, -5px);
+}
+
+.annulationButton:hover::after{
+    transform: translate(5px, 5px);
+}
+
 .champsDeRecherche{
     display: flex;
     justify-content: center;
@@ -342,6 +377,51 @@ button:hover::after{
     align-items: center;
 
 }
+
+/*-----------Formulaire d'ajout de sortie------------*/
+
+.form_addSortie{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px;
+}
+
+.form_addSortie form{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.form_addSortie form div{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.form_addSortie form div input, .form_addSortie form div select, .form_addSortie form div textarea{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.form_addSortie form div label{
+    width: 40%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding-leftt: 10%;
+}
+
+
+
+
+
 
 /* ---------SortieCard---------------*/
 
@@ -544,13 +624,59 @@ footer{
     width: 100%;
 }
 
-.button-group{
+.buttons-group{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
     margin: 30px;
 }
+
+#annulerSortie{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.detailWrapper{
+    display: flex;
+    justify-content: space-around;
+    margin: 50px 20px;
+}
+
+.detailWrapper h3{
+    margin-bottom: 20px;
+}
+
+.participant a{
+    display: flex;
+    align-items: center;
+}
+
+.miniAvatar{
+    width: 50px;
+    margin: 20px;
+}
+
+.infosProfilWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+
+.avatarWrapper{
+    position: relative;
+    width: 200px;
+    height: 200px;
+}
+
+#avatar2 img{
+    width: 100%;
+    height: 100%;
+}
+
 
 
 
