--- a/templates/profile/detail.html.twig
+++ b/templates/profile/detail.html.twig
@@ -1,20 +1,26 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Détail du profil</h2>
-    <div>Pseudo : {{ profile.pseudo }}</div>
-    <div>Prénom : {{ profile.prenom }}</div>
-    <div>Nom : {{ profile.nom }}</div>
-    <div>Téléphone : {{ profile.telephone }}</div>
-    <div>email : {{ profile.email }}</div>
-    <div>Campus : {{ profile.campus.nom }}</div>
-    <div>Photo : {{ profile.image }}</div>
-    <div id="avatar2">
-        {% if profile.image %}
-            <img src="{{ asset('uploads/avatars/' ~ profile.image)}}" alt="{{ profile.prenom }} {{ profile.nom }}" height="150 px">
-        {% else %}
-            <img src="{{ asset('uploads/logo-eni.jpg/')}}" alt="Photo par défaut" width="auto" height="150 px">
-        {% endif %}
+    <h1>Détail du profil</h1>
+    <div class="infosProfilWrapper">
+        <div class="avatarWrapper">
+            <div id="avatar2">
+                {% if profile.image %}
+                    <img src="{{ asset('uploads/avatars/' ~ profile.image)}}" alt="{{ profile.prenom }} {{ profile.nom }}>
+            {% else %}
+                <img src="{{ asset('images/avatars/avataaars(1).png/')}}" alt="Photo par défaut">
+                {% endif %}
+            </div>
+        </div>
+        <div class="infosProfil">
+            <div>Pseudo : {{ profile.pseudo }}</div>
+            <div>Prénom : {{ profile.prenom }}</div>
+            <div>Nom : {{ profile.nom }}</div>
+            <div>Téléphone : {{ profile.telephone }}</div>
+            <div>email : {{ profile.email }}</div>
+            <div>Campus : {{ profile.campus.nom }}</div>
+        </div>
+
     </div>
 {% endblock %}
 
