--- a/templates/sortie/detail.html.twig
+++ b/templates/sortie/detail.html.twig
@@ -3,28 +3,47 @@
 {% block title %}Hello ListSortieController!{% endblock %}
 
 {% block body %}
+
     <h1>{{ sortie.nom }}</h1>
 
-    <p>Date et heure de sortie : {{ sortie.dateHeureDebut|date("d/m/Y") }}</p>
-    <p>Date limite d'inscription : {{ sortie.dateLimiteInscription|date("d/m/Y") }}</p>
-    <p>Durée : {{ sortie.duree }}</p>
-    <p>Nombre de places : {{ sortie.nbInscriptionsMax }}</p>
-    <p>Description : {{ sortie.infosSortie }}</p>
-    <p>Campus : {{ sortie.lieu.nom }}</p>
-    <p>Rue : {{ sortie.lieu.rue }}</p>
-    <p>Code postal : {{ sortie.lieu.ville.codePostal }}</p>
-    <p>Longitude : {{ sortie.lieu.longitude }}</p>
-    <p>Latitude : {{ sortie.lieu.latitude }}</p>
+    <div class="detailWrapper">
 
+        <div class="infosDetailWrapper">
+            <h3>Infos de la sortie</h3>
+            <p>Date et heure de sortie : {{ sortie.dateHeureDebut|date("d/m/Y H:i") }}</p>
+            <p>Date limite d'inscription : {{ sortie.dateLimiteInscription|date("d/m/Y") }}</p>
+            <p>Durée : {{ sortie.duree }} minutes</p>
+            <p>Nombre de places : {{ sortie.nbInscriptionsMax }}</p>
+            <p>Description : {{ sortie.infosSortie }}</p>
+            <p>Campus : {{ sortie.campus.nom }}</p>
+            <p>Rue : {{ sortie.lieu.rue }}</p>
+            <p>Code postal : {{ sortie.lieu.ville.codePostal }}</p>
+            <p>Longitude : {{ sortie.lieu.longitude }}</p>
+            <p>Latitude : {{ sortie.lieu.latitude }}</p>
+        </div>
 
-    <div class="participants_list">
-        <h3>Liste des participants</h3>
-        {% for participant in sortie.participants %}
-            <div class="particpant">
-                <a href="{{ path('profile_detail', {"id":participant.id})  }}">{{ participant.pseudo}} - {{ participant.prenom}} - {{ participant.nom}}</a>
+        <div class="listeParticipants">
+
+            <div class="participants_list">
+                <h3>Liste des participants</h3>
+                {% for participant in sortie.participants %}
+                    <div class="participant">
+                        <a href="{{ path('profile_detail', {"id":participant.id})  }}"><span>
+                                {% if participant.image %}
+                                    <img class="miniAvatar" src ={{ asset('uploads/avatars/'~participant.image) }} >
+                                {% else  %}
+                                    <img class="miniAvatar" src ={{ asset('images/avatars/avataaars(7).png')}} >
+                                {% endif %}
+
+                            </span> {{ participant.prenom}}  {{ participant.nom }} alias {{ participant.pseudo}}
+                        </a>
+                    </div>
+                {% endfor %}
+
             </div>
 
-        {% endfor %}
+        </div>
+
 
     </div>
 
