--- a/templates/profile/detail.html.twig
+++ b/templates/profile/detail.html.twig
@@ -8,7 +8,7 @@
                 {% if profile.image %}
                     <img src="{{ asset('uploads/avatars/' ~ profile.image)}}" alt="{{ profile.prenom }} {{ profile.nom }}>
             {% else %}
-                <img src="{{ asset('images/avatars/avataaars(1).png/')}}" alt="Photo par défaut">
+                <img src="{{ asset('images/avatars/avataaars(1).png')}}" alt="Photo par défaut">
                 {% endif %}
             </div>
         </div>
